# kea

./: .gitlab-ci.yml  .readthedocs.yaml  ChangeLog  configure.ac  hammer.py
.gitlab/issue_templates/: release_checklist.md
doc/devel/: Doxyfile  fuzz.dox
doc/examples/agent/: rbac.json
doc/examples/ddns/: all-keys.json  sample1.json  template.json
doc/examples/kea4/: all-keys.json  all-options.json  hooks-radius.json
doc/examples/kea6/: advanced.json  all-keys-netconf.json  all-keys.json
doc/examples/netconf/kea-dhcp6-operations/: logging.xml
doc/sphinx/: Makefile.am  api-files.txt  conf.py  mes-files.txt  mes_files.mk
doc/sphinx/arm/: ddns.rst  dhcp4-srv.rst  dhcp6-srv.rst  ext-gss-tsig.rst  ext-netconf.rst  hooks-cb-cmds.rst  hooks-host-cmds.rst  hooks-lease-query.rst  hooks-pre-process.rst  hooks-radius.rst  hooks-rbac.rst  hooks.rst  install.rst  logging.rst  rst_arm_sources.mk
m4macros/: ax_cpp11.m4  ax_cpp20.m4  ax_find_library.m4  ax_gtest.m4  ax_netconf.m4
src/hooks/: Makefile.am
src/hooks/agent/: Makefile.am
src/hooks/agent/rbac/: .gitattributes  Makefile.am  rbac.cc  rbac.dox  rbac.h  rbac_acl.cc  rbac_acl.h  rbac_api.cc  rbac_api.h  rbac_callouts.cc  rbac_config.cc  rbac_config.h  rbac_log.cc  rbac_log.h  rbac_messages.cc  rbac_messages.h  rbac_messages.mes  rbac_response_filter.cc  rbac_response_filter.h  rbac_role.cc  rbac_role.h
src/hooks/agent/rbac/libloadtests/: Makefile.am  load_unload_unittests.cc
src/hooks/agent/rbac/tests/: .gitignore  Makefile.am  rbac_acl_unittests.cc  rbac_api_unittests.cc  rbac_callout_unittests.cc  rbac_config_unittests.cc  rbac_response_filter_unittests.cc  rbac_role_unittests.cc  rbac_unittests.cc
src/hooks/dhcp/: Makefile.am
src/hooks/dhcp/bootp/: bootp_callouts.cc
src/hooks/dhcp/flex_option/: flex_option.cc  flex_option.h
src/hooks/dhcp/pre_process/: .gitattributes  Makefile.am  pre_process.cc  pre_process.dox  pre_process.h  pre_process_callouts.cc  pre_process_log.cc  pre_process_log.h  pre_process_messages.cc  pre_process_messages.h  pre_process_messages.mes
src/hooks/dhcp/pre_process/libloadtests/: .gitignore  Makefile.am  callout_unittests.cc  load_unload_unittests.cc
src/hooks/dhcp/pre_process/tests/: Makefile.am  pre_process_unittests.cc  sub_option_unittests.cc  test_pre_process.h
src/lib/asiodns/: io_fetch.cc
src/lib/asiolink/: botan_boost_tls.h  interval_timer.cc
src/lib/cc/: data.cc  data.h  simple_parser.cc
src/lib/d2srv/: d2_cfg_mgr.cc  d2_cfg_mgr.h  d2_config.cc  d2_config.h  d2_messages.cc  d2_messages.h  d2_messages.mes  d2_simple_parser.cc  d2_stats.cc  d2_tsig_key.cc  d2_update_message.h  dns_client.cc  nc_trans.cc  nc_trans.h
src/lib/database/: backend_selector.cc  database_connection.h  db_exceptions.h
src/lib/dhcp/: Makefile.am  classify.h  dhcp4.h  duid_factory.cc  iface_mgr.cc  iface_mgr.h  iface_mgr_bsd.cc  iface_mgr_linux.cc  iface_mgr_sun.cc  libdhcp++.cc  option.cc  option.h  option4_addrlst.cc  option4_addrlst.h  option4_client_fqdn.cc  option4_client_fqdn.h  option4_dnr.cc  option4_dnr.h  option6_addrlst.cc  option6_addrlst.h  option6_auth.cc  option6_auth.h  option6_client_fqdn.cc  option6_client_fqdn.h  option6_dnr.cc  option6_dnr.h  option6_ia.cc  option6_ia.h  option6_iaaddr.cc  option6_iaaddr.h  option6_iaprefix.cc  option6_iaprefix.h  option6_pdexclude.cc  option6_pdexclude.h  option6_status_code.cc  option6_status_code.h  option_custom.cc  option_custom.h  option_int.h  option_int_array.h  (+12 more)
src/lib/dhcp_ddns/: dhcp_ddns_messages.mes  ncr_io.h  ncr_msg.cc  ncr_msg.h  ncr_udp.cc  ncr_udp.h
src/lib/dhcpsrv/: Makefile.am  alloc_engine.cc  alloc_engine.h  alloc_engine_messages.mes  auxiliary_tables.h  base_host_data_source.h  cfg_globals.cc  cfg_globals.h  cfg_hosts.cc  cfg_iface.cc  cfg_iface.h  cfg_multi_threading.cc  cfg_option.cc  cfg_option.h  cfg_shared_networks.h  cfg_subnets4.cc  cfg_subnets4.h  cfg_subnets6.cc  cfg_subnets6.h  client_class_def.cc  csv_lease_file4.cc  csv_lease_file4.h  csv_lease_file6.cc  csv_lease_file6.h  d2_client_cfg.cc  d2_client_cfg.h  d2_client_mgr.h  dhcp4o6_ipc.cc  dhcpsrv_messages.cc  dhcpsrv_messages.h  dhcpsrv_messages.mes  fuzz.h  host.cc  host_mgr.cc  lease.cc  lease.h  lease_mgr.h  memfile_lease_mgr.cc  memfile_lease_mgr.h  memfile_lease_storage.h  (+14 more)
src/lib/dns/: gen-rdatacode.py.in  message.cc  nsec3hash.h  rdata.h  rrparamregistry.h  tsigrecord.h
src/lib/eval/: evaluate.h  lexer.ll  token.cc
src/lib/hooks/: callout_handle.cc  callout_handle.h  hooks_messages.mes  hooks_user.dox  library_manager.cc  library_manager.h  server_hooks.h
src/lib/http/: client.h  http_messages.mes
src/lib/log/: logger_level.h  logger_manager.cc  logger_manager_impl.h  logger_unittest_support.h  logging.dox  message_dictionary.h
src/lib/mysql/: Makefile.am  mysql_connection.cc  mysql_connection.h
src/lib/pgsql/: pgsql_connection.h  pgsql_exchange.h
src/lib/process/: d_controller.h  d_process.h  process_messages.cc  process_messages.h  process_messages.mes
src/lib/util/: Makefile.am  labeled_value.h  multi_threading_mgr.cc  multi_threading_mgr.h  patricia_tree.h  state_model.h  stopwatch.h  strutil.h  versioned_csv_file.h  watch_socket.h
src/lib/yang/: adaptor_config.cc  translator.cc  translator.h  translator_class.cc  translator_class.h  translator_config.cc  translator_config.h  translator_control_socket.cc  translator_control_socket.h  translator_database.cc  translator_database.h  translator_host.cc  translator_host.h  translator_logger.cc  translator_logger.h  translator_option_data.cc  translator_option_data.h  translator_option_def.cc  translator_option_def.h  translator_pd_pool.cc  translator_pd_pool.h  translator_pool.cc  translator_pool.h  translator_shared_network.cc  translator_shared_network.h  translator_subnet.cc  translator_subnet.h  yang.dox
src/share/api/: api_files.mk  build-extended-info-tables6.json  remote-server4-config-get.json  remote-server4-config-set.json  remote-server6-config-get.json  remote-server6-config-set.json
tools/: check-messages.sh  clang-format.sh  histogram.py  uncrustify.sh
(+173 files in other folders)
